--- a/index.html
+++ b/index.html
@@ -29,40 +29,17 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog.</h3>
+<a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h3>
 
-<p>Test 1.</p>
-
-<pre><code>Test 2.
-</code></pre>
-
-<p>Test 3.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test 4.</h3>
-
-<p>Test 5.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test 6.</h3>
-
-<p>Test 7.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test 8.</h3>
-
-<p>Test 9.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test 10.</h3>
-
-<p>Test 11.</p>
+<p>As I am currently looking for a job I decided to put up a website to add to my portfolio to show some of the things that I am capable of.</p>
         </section>
 
         <aside id="sidebar">
 
 
-          <p>Test 12.</a>.</p>
+          <p>Resume</p>
+          <p>My Projects</p>
+          <p>Contact</p>
         </aside>
       </div>
     </div>
