Added book reviews
Added book reviews

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
           <p>Resume</p>
           <p>My Projects</p>
+          <p>Book Reviews</p>
           <p>Contact</p>
         </aside>
       </div>
