--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
         </section>
 
         <aside id="sidebar">
-
-
-          <p>Resume</p>
-          <p>My Projects</p>
-          <p>Book Reviews</p>
-          <p>Contact</p>
+          <a href="http://danieboy.github.io/resume"> Resume</a>
+          <a href="http://danieboy.github.io/my-projects"> My Projects</a>
+          <a href="http://danieboy.github.io/book-reviews"> Book Reviews</a>
+          <a href="http://danieboy.github.io/contact"> Contact</a>
         </aside>
       </div>
     </div>
