--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </section>
 
         <aside id="sidebar">
-          <a href="http://danieboy.github.io/resume"> Resume</a>
-          <a href="http://danieboy.github.io/my-projects"> My Projects</a>
-          <a href="http://danieboy.github.io/book-reviews"> Book Reviews</a>
-          <a href="http://danieboy.github.io/contact"> Contact</a>
+          <a href="http://danieboy.github.io/resume"> Resume</a></br>
+          <a href="http://danieboy.github.io/My-projects"> My Projects</a></br>
+          <a href="http://danieboy.github.io/Book-Reviews"> Book Reviews</a></br>
+          <a href="http://danieboy.github.io/Contact"> Contact</a></br>
         </aside>
       </div>
     </div>
