Corrected links on every page
Corrected links on every page

--- a/Book-Reviews.html
+++ b/Book-Reviews.html
@@ -35,12 +35,21 @@
         </section>
 
         <aside id="sidebar">
-
-
-          <p>Resume</p>
-          <p>My Projects</p>
-          <p>Book Reviews</p>
-          <p>Contact</p>
+          <a href="http://danieboy.github.io/"> Start</a>
+          </br>
+          </br>
+          <a href="http://danieboy.github.io/resume"> Resume</a>
+          </br>
+          </br>
+          <a href="http://danieboy.github.io/My-projects"> My Projects</a>
+          </br>
+          </br>
+          <a href="http://danieboy.github.io/Book-Reviews"> Book Reviews</a>
+          </br>
+          </br>
+          <a href="http://danieboy.github.io/Contact"> Contact</a>
+          </br>
+          </br>
         </aside>
       </div>
     </div>
