Added pictures for hot and cold test

--- a/sphere.html
+++ b/sphere.html
@@ -29,33 +29,9 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span>
-.o-wrapper
-  -100.times do
-    .o
+            .o-wrapper -100.times do .o
         </section>
-
-        <aside id="sidebar">
-          <a href="http://danieboy.github.io/"> Start</a>
-          </br>
-          </br>
-          <a href="http://danieboy.github.io/resume"> Resume</a>
-          </br>
-          </br>
-          <a href="http://danieboy.github.io/My-projects"> My Projects</a>
-          </br>
-          </br>
-          <a href="http://danieboy.github.io/Book-Reviews"> Book Reviews</a>
-          </br>
-          </br>
-          <a href="http://danieboy.github.io/Contact"> Contact</a>
-          </br>
-          </br>
-        </aside>
       </div>
     </div>
-
-  
   </body>
 </html>
