--- a/hotorcold.html
+++ b/hotorcold.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="./jquery-1.10.2.js"></script> 
 		<script src="application.js"></script> 
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 		<title>Hot or Cold?</title>
 	</head>
 	<body>
@@ -20,13 +20,13 @@
 				
 				<h2 class="output-message" id="Right">Congratulations, you chose right! :)</h2>
 				<h2 class="output-message" id="out-of-range">Make sure to enter a number between 1 and 100</h2>
-				<h2 class="output-message" id="tooHigh-warmer">You're warmer :), but chose too high. Try again!</h2>
-				<h2 class="output-message" id="tooHigh-colder">You chose too high and are even colder :(. Try again.</h2>
-				<h2 class="output-message" id="tooHigh">Too high :(! Try again.</h2>
-				<h2 class="output-message" id="tooLow-warmer">You're warmer :), but chose too low. Try again!</h2>
-				<h2 class="output-message" id="tooLow">Too low :(! Try again!</h2>
-				<h2 class="output-message" id="tooLow-colder">Too low and even colder :(. Try again!</h2>
-				<h2 class="output-message" id="NaN">Make sure to enter a NUMBER (not a word!) between 1 and 100</h2>
+				<h2 class="output-message" id="tooHigh-warmer">You're warmer, but chose too high. Try again!</h2>
+				<h2 class="output-message" id="tooHigh-colder">You chose too high and are even colder. Try again.</h2>
+				<h2 class="output-message" id="tooHigh">Too high! Try again.</h2>
+				<h2 class="output-message" id="tooLow-warmer">You're warmer, but chose too low. Try again!</h2>
+				<h2 class="output-message" id="tooLow">Too low! Try again!</h2>
+				<h2 class="output-message" id="tooLow-colder">Too low and even colder. Try again!</h2>
+				<h2 class="output-message" id="NaN">Make sure to enter a number between 1 and 100</h2>
 			</div>
 			<div id="buttonArea">
 				<input type="text" class="textBox" id="numberField" onfocus="{this.value = ''}" onblur = "{this.value = ''}" value= " " onkeydown="if (event.keyCode == 13) document.getElementById('Button1').click();"/>
