Minor changes to text

--- a/hotorcold.html
+++ b/hotorcold.html
@@ -18,8 +18,8 @@
 			</div>
 			<div id="outputSpace">
 				
-				<h2 class="output-message" id="Right">Congratulations, you chose right! :)</h2>
-				<h2 class="output-message" id="out-of-range">Make sure to enter a number between 1 and 100</h2>
+				<h2 class="output-message" id="Right">Congratulations, you chose correct number!</h2>
+				<h2 class="output-message" id="out-of-range">Make sure to enter a number between 1 and 100.</h2>
 				<h2 class="output-message" id="tooHigh-warmer">You're warmer, but chose too high. Try again!</h2>
 				<h2 class="output-message" id="tooHigh-colder">You chose too high and are even colder. Try again.</h2>
 				<h2 class="output-message" id="tooHigh">Too high! Try again.</h2>
