Added link to hot or cold

--- a/My-projects.html
+++ b/My-projects.html
@@ -31,7 +31,8 @@
           <h3>
 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>My projects!</h3>
 
-<p>These are my projects.</p>
+<p><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></p>
+<h2></h2>
         </section>
 
         <aside id="sidebar">
