Added linkedin information

--- a/Contact.html
+++ b/Contact.html
@@ -31,7 +31,10 @@
           <h3>
 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact!</h3>
 
-<p>This is my contact info.</p>
+<p>This is my contact info.
+<br/>
+<a href="se.linkedin.com/in/danandersson7"> Linkedin</a>
+</p>
         </section>
 
         <aside id="sidebar">
