fixed linkedin link

--- a/Contact.html
+++ b/Contact.html
@@ -33,7 +33,7 @@
 
 <p>This is my contact info.
 <br/>
-<a href="se.linkedin.com/in/danandersson7"> Linkedin</a>
+<a href="http://se.linkedin.com/in/danandersson7"> Linkedin</a>
 </p>
         </section>
 
