Trying to make angular work

--- a/Angular/Default.html
+++ b/Angular/Default.html
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="Scripts/angular.min.js"></script>
     <script type="text/javascript" src="Scripts/app.js"></script>
     <script type="text/javascript" src="Scripts/products.js"></script>
+    <script type="text/css" href="Styles/Site.css"></script>
+    <script type="text/css" href="StyleS/StyleSheet1.css"></script>
   </head>
 
   <body ng-controller="StoreController as store">
