--- a/Angular/product-tabs.htm
+++ b/Angular/product-tabs.htm
@@ -1,4 +1,5 @@
-﻿<!-- Tabs Go Here -->
+﻿<!DOCTYPE html>
+<!-- Tabs Go Here -->
 <section>
   <ul class="nav nav-pills">
     <li ng-class="{ active:tab.isSet(1) }">
