--- a/Angular/product-gallery.htm
+++ b/Angular/product-gallery.htm
@@ -1,4 +1,5 @@
-﻿<div ng-show="product.images.length">
+﻿<!DOCTYPE html>
+<div ng-show="product.images.length">
   <div class="img-wrap">
     <img ng-src="{{product.images[gallery.current]}}" />
   </div>
