--- a/Angular/product-reviews.htm
+++ b/Angular/product-reviews.htm
@@ -1,4 +1,5 @@
-﻿<!--  Product Reviews List -->
+﻿<!DOCTYPE html>
+<!--  Product Reviews List -->
 <ul>
   <h4>Reviews</h4>
   <li ng-repeat="review in product.reviews">
