--- a/Angular/store-products.htm
+++ b/Angular/store-products.htm
@@ -1,4 +1,5 @@
-﻿[
+﻿<!DOCTYPE html>
+[
   {
     "name": "Azurite",
     "description": "Some gems have hidden qualities beyond their luster, beyond their shine... Azurite is one of those gems.",
