Updated css references

--- a/store.html
+++ b/store.html
@@ -2,6 +2,11 @@
 <html ng-app="gemStore">
 <head>
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css/bootstrap-theme.css.map" />
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css/bootstrap.css.map" />
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="products.js"></script>
     <script type="text/javascript" src="app.js"></script>
