Changed js references

--- a/store.html
+++ b/store.html
@@ -10,6 +10,9 @@
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="products.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="bootstrap.min.js/bootstrap.js"></script>
+    <script type="text/javascript" src="bootstrap.min.js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="bootstrap.min.js/npm.js"></script>
 </head>
 
 <body ng-controller="StoreController as store">
