Changes to my projects look

--- a/My-projects.html
+++ b/My-projects.html
@@ -31,10 +31,10 @@
           <h3>
 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>My projects!</h3>
 
-          <p>><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></p>
+          <h2><p><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></p></h2>
           </br>
-          <p><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></p>
-<h2></h2>
+          <h2><p><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></p></h2>
+
         </section>
 
         <aside id="sidebar">
