Added additional projects and android app

--- a/My-projects.html
+++ b/My-projects.html
@@ -32,8 +32,10 @@
 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>My projects!</h3>
 
           <h2><p><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></p></h2>
-          </br>
           <h2><p><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></p></h2>
+          <h2><p><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: BMI-counter</a></p></h2>
+          <h2><p><a href="http://www.markettime.se/"> Markettime through Diflex AB (Swedish)</a></p></h2>
+          <h2>><p><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></p></h2>
 
         </section>
 
@@ -51,8 +53,6 @@
           </br>
           </br>
           <a href="http://danieboy.github.io/Contact"> Contact</a>
-          </br>
-          </br>
         </aside>
       </div>
     </div>
