Graphical changes and added <h2>

--- a/My-projects.html
+++ b/My-projects.html
@@ -35,7 +35,7 @@
           <h2><p><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></p></h2>
           <h2><p><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: BMI-counter</a></p></h2>
           <h2><p><a href="http://www.markettime.se/"> Markettime through Diflex AB (Swedish)</a></p></h2>
-          <h2>><p><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></p></h2>
+          <h2><p><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></p></h2>
 
         </section>
 
