--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -31,12 +31,18 @@
             <h3>
                 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my Android BMI-Calculator!</h3>
 
-            <h2><img src="pictures/start-screen.png" alt="Start Screen"></br></h2>
-            <h2><img src="pictures/change-theme.png" alt="Change Theme"></br></h2>
-            <h2><img src="pictures/calculate.png" alt="Calculate"></br></h2>
-            <h2><img src="pictures/results.png" alt="Results"></br></h2>
-            <h2><img src="pictures/facebook-share.png" alt="Facebook Share"></br></h2>
-            <h2><img src="pictures/about.png" alt="About"></br></h2>
+            <h2>Start Screen</h2>
+                <img src="pictures/start-screen.png" alt="Start Screen"></br>
+            <h2>Change Theme</h2>
+                <img src="pictures/change-theme.png" alt="Change Theme"></br>
+            <h2>Calculate</h2>
+                <img src="pictures/calculate.png" alt="Calculate"></br>
+            <h2>Results</h2>
+                <img src="pictures/results.png" alt="Results"></br>
+            <h2>Share on Facebook</h2>
+                <img src="pictures/facebook-share.png" alt="Facebook Share"></br>
+            <h2>About</h2>
+            <img src="pictures/about.png" alt="About">
             </p>
         </section>
 
