--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h3>
 
 <p>As I am currently looking for a job I decided to put up a website to add to my portfolio to show some of the things that I am capable of.</p>
+          <img src="images/Web-under-construction.jpeg" alt="Under Construction"></br>
         </section>
 
         <aside id="sidebar">
