--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/demo.css" />
-    <link rel="stylesheet" type="text/css" href="css/tabs.css" />
-    <link rel="stylesheet" type="text/css" href="css/tabstyles.css" />
-    <script src="js/modernizr.custom.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/demo.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/tabs.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/tabstyles.css" />
+    <script src="javascripts/modernizr.custom.js"></script>
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -185,7 +185,7 @@
       </div>
     </div>
 
-  <script src="js/cbpFWTabs.js"></script>
+  <script src="javascripts/cbpFWTabs.js"></script>
   <script>
     (function() {
 
