--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en" class="no-js" ng-app="developerBlog">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -15,6 +15,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/tabstyles.css" />
     <script src="javascripts/modernizr.custom.js"></script>
 
+    <link data-require="bootstrap-css" data-semver="3.1.1" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+    <link data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://raw.github.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
+    <script data-require="semantic-ui@*" data-semver="0.9.6" src="https://raw.github.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/javascript/semantic.min.js"></script>
+    <script data-require="angular.js@1.2.x" src="http://code.angularjs.org/1.2.15/angular.js" data-semver="1.2.15"></script>
+    <script data-require="jquery@*" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="app.js"></script>
+    <script src="myDirectives.js"></script>
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -22,7 +30,7 @@
     <title>Danieboy.GitHub.io by Danieboy</title>
   </head>
 
-  <body>
+  <body ng-controller="BlogController as blog">
 
   <svg class="hidden">
     <defs>
@@ -84,100 +92,25 @@
             </nav>
             <div class="content-wrap">
               <section id="section-shape-1">
-                <h1>
-                  <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h1>
-                As I am currently looking for a job I decided to put up a website to add to my portfolio to show some of the things that I am capable of.
+                <start></start>
                 <img src="images/Web-under-construction.jpeg" alt="Under Construction"></br>
               </section>
 
               <section id="section-shape-2">
-                <h1>Anställningar</h1>
-                <h2>Webbutvecklare</h2>
-                Diflex AB, 2014 — 2015</br>
-                Webbutvecklare i ASP.net, www.markettime.se / www.markettools.se.</br>
-                Underhåll av sida, användbarhetstestning samt tillägg av extra funktioner efter kundkontakt.</br>
-                </br>
-                <h2>Råvaruhanterare</h2>
-                Perstorp AB, 2010 — 2013</br>
-                Sommarjobb 4 år i rad.</br>
-                </br>
-                Arbetsuppgifter:</br>
-                * Kommunikation med en många människor involverade i processen.</br>
-                * Fysiskt tömma alla lastbilar och tågvagnar som levererades.</br>
-                * Inventeringar av hela Perstorp ABs lager.</br>
-                </br>
-                <h2>Underhållsingenjör</h2>
-                Perstorp AB, 2009 — 2009</br>
-                Praktik som sedan ledde till sommarjobb.</br>
-                </br>
-                <h2>Processingenjör</h2>
-                Perstorp AB, 2008 — 2008</br>
-                Praktik.</br>
-                </br>
-                <h2>Laborationstekniker</h2>
-                Celanese Emulsions, 2008 — 2008</br>
-                Sommarjobb.</br>
-                </br>
-                <h2>Simhallsanställd</h2>
-                Klippans Simhall, 2006 — 2008</br>
-                Sommarjobb på Ljungbyheds Friluftsbad 3 år i rad.</br>
-
-
-                <h1>Utbildningar</h1>
-                <h2>Lunds Tekniska Högskola, Campus Helsingborg</h2>
-                  Data, 2010 — 2015</br>
-                  Högskoleingenjör i Datateknik, allt från utveckling av program till applikationer för Android och webbutveckling.</br>
-                  </br>
-                <h2>Perstorp Gymnasium</h2>
-                  Teknik och teknisk industri, 2007 — 2010</br>
-                  Perstorp Gymnasium, en av de bästa gymnasieskolorna i Sverige under tiden. Allt från industri till kemi och företagsekonomi.</br>
-
-
-                <h1>Programmeringsspråk / relevanta verktyg</h1>
-                Java / Android utveckling.</br>
-                  C++.</br>
-                  ASP.net (C#, CSS, XML, SQL, JavaScript, phpMyAdmin).</br>
-                  HTML/HTML5.</br>
-                  Angular.js / Bootstrap.</br>
-                  GitHub / GitPages.</br>
-
-
-                <h1>Övriga meriter</h1>
-                <h2>IT-ansvarig/Webmaster</h2>
-                  Helsingborgsspexet, 2014 — Pågående</br>
-                  Kommunikationsansvarig samt ansvarig för hemsida, sociala medier och med i styrelse.</br>
-
-
-                <h1>Körkort</h1>
-                AM, B
-
-                <h1>Språk</h1>
-                Engelska, Flytande</br>
-                Svenska, Flytande</br>
-                Tyska, Lite</br>
-
+                <!-- Resume -->
+                <resume></resume>
               </section>
 
               <section id="section-shape-3">
-                <h3><p><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></p></h3>
-                <h3><p><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></p></h3>
-                <h3><p><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: BMI-counter</a></p></h3>
-                <h3><p><a href="http://www.markettime.se/"> Markettime through Diflex AB (Swedish)</a></p></h3>
-                <h3><p><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></p></h3>
+                <myProjects></myProjects>
               </section>
 
               <section id="section-shape-4">
-                These are my book reviews.
+                <reviews></reviews>
               </section>
 
               <section id="section-shape-5">
-                This is my contact info.
-                <br/>
-                <a href="http://se.linkedin.com/in/danandersson7"> Linkedin</a>
-                <br/>
-                <a href="https://github.com/Danieboy"> GitHub</a>
-                <br/>
-                gda10dan@student.lu.se
+                <contact></contact>
               </section>
             </div><!-- /content -->
           </div><!-- /tabs -->
