--- a/myProjects.html
+++ b/myProjects.html
@@ -1,5 +1,5 @@
-<h3><p><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></p></h3>
-<h3><p><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></p></h3>
-<h3><p><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: BMI-counter</a></p></h3>
-<h3><p><a href="http://www.markettime.se/"> Markettime through Diflex AB (Swedish)</a></p></h3>
-<h3><p><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></p></h3>
+<h3><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></h3>
+<h3><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></h3>
+<h3><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: BMI-counter</a></h3>
+<h3><a href="http://www.markettime.se/"> Markettime through Diflex AB (Swedish)</a></h3>
+<h3><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></h3>
