Temporary change to projects page

--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
 
               <section id="section-shape-3">
                 <myprojects></myprojects>
+                <h3><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></h3>
+                <h3><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></h3>
+                <h3><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: BMI-counter</a></h3>
+                <h3><a href="http://www.markettime.se/"> Markettime through Diflex AB (Swedish)</a></h3>
+                <h3><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></h3>
               </section>
 
               <section id="section-shape-4">
