Finally back to complete after a busy week
Took and uploaded my profile picture after editing in Adobe Photoshop
CS6. Also trying to fix the "myprojects.html" not working in the
AngularJS code while it should. Problem with .idea\workspace.xml which
automaticly updates as it pleases.

--- a/start.html
+++ b/start.html
@@ -1,3 +1,4 @@
 <h1>
     <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h1>
 As I am currently looking for a job I decided to put up a website to add to my portfolio to show some of the things that I am capable of.
+<img src="images/Web-under-construction.jpeg" alt="Under Construction"></br>
