--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
               </section>
 
               <section id="section-shape-2">
-                <!-- Resume -->
                 <resume></resume>
               </section>
 
@@ -111,8 +110,8 @@
               <section id="section-shape-5">
                 <contact></contact>
               </section>
-            </div><!-- /content -->
-          </div><!-- /tabs -->
+            </div>
+          </div>
         </section>
       </div>
     </div>
