--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </section>
 
               <section id="section-shape-3">
-                <myprojects></myprojects>
+                <myProjects></myProjects>
               </section>
 
               <section id="section-shape-4">
