Updated start.html with information

--- a/start.html
+++ b/start.html
@@ -1,4 +1,22 @@
 <h1>
     <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h1>
-As I am currently looking for a job I decided to put up a website to add to my portfolio to show some of the things that I am capable of.
-<img src="images/Web-under-construction.jpeg" alt="Under Construction"></br>
+ey!
+My name is Dan Andersson and is 23 years old.
+Currently living in Klippan, Skåne, but I've plans to move soon depending the workplace.
+I studied at the Faculty of Engineering (LTH), Lund University at their Campus Helsingborg for a bachelor's degree in computer science, namely a broad education that is most centered around the development of software, websites or applications for Android phones.
+</br>
+The past year I have spent at a company called Diflex AB, where I have worked with my thesis and has been a web developer for a service that the company offers, www.markettools.se, which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
+Now I'm employed by the hour at Diflex AB so they call me when needed for a project.
+I also have a B license (normal cars) and usually have access to a car if needed through my parents, but plan to buy a car in the near future.
+</br>
+In my spare time I go to the gym, depending on how much time I have over. I am also the IT manager for HelsingborgsSpexet, which is a non-profit organization based around students at Campus Helsingborg.
+Information about that can be found at:
+</br>
+<a href="http://www.helsingborgsspexet.se/"> Helsingborgsspexet.se (Swedish)</a>
+</br>
+As an IT manager, I look after the website, is in charge of communication (email to both students, partners and social media) and is on the board.
+For the moment I am trying to build my portfolio by doing projects such as an Android application and this personal homepage.
+</br>
+My current goal is to get my foot in the industry and being able to make a living our of something I really enjoy doing - programming and working in a team.
+</br>
+<img src="images/profilepicture.jpg" alt="Profile Picture"></br>
