--- a/start.html
+++ b/start.html
@@ -18,6 +18,6 @@ Information about that can be found at:
 As an IT manager, I look after the website, is in charge of communication (email to both students, partners and social media) and is on the board.
 For the moment I am trying to build my portfolio by doing projects such as an Android application and this personal homepage.
 </br></br>
-My current goal is to get my foot in the industry and being able to make a living our of something I really enjoy doing - programming and working in a team.
+My current goal is to get my foot in the industry and being able to make a living out of something I really enjoy doing - programming and working in a team.
 </br></br>
 <img src="images/profilepicture.jpg" alt="Profile Picture"></br>
