Apparently I can't spell today.

--- a/start.html
+++ b/start.html
@@ -3,7 +3,7 @@
 </br>
 Hello there!
 </br></br>
-My name is Dan Andersson and is 23 years old.
+My name is Dan Andersson and am 23 years old.
 I am currently living in Klippan (Skane, Sweden), but I've plans to move soon depending the workplace.
 I studied at the Faculty of Engineering (LTH), Lund University at their Campus Helsingborg for a bachelor's degree in computer science, namely a broad education that is most centered around the development of software, websites or applications for Android phones.
 </br></br>
