--- a/start.html
+++ b/start.html
@@ -3,15 +3,16 @@
 </br>
 Hello there!
 </br></br>
-My name is Dan Andersson and am 23 years old.
-I am currently living in Klippan (Skane, Sweden), but I've plans to move soon depending the workplace.
-I studied at the Faculty of Engineering (LTH), Lund University at their Campus Helsingborg for a bachelor's degree in computer science, namely a broad education that is most centered around the development of software, websites or applications for Android phones.
+My name is Dan Andersson and I am 23 years old.
+I am currently living in Klippan (Skåne, Sweden), but I've got plans to move as soon as possible depending on when and where I land my next job.
+I studied at the Faculty of Engineering (LTH), Lund University at their Campus Helsingborg for a bachelor's degree in computer science, in short it's a broad education that is most centered around the development of software, websites or applications for Android phones.
 </br></br>
-The past year I have spent at a company called Diflex AB, where I have worked with my thesis and has been a web developer for a service that the company offers, www.markettools.se, which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
+The past year I have spent at a company called Markettime AB, where I have worked with my bachelor's thesis and has been a web developer for a service that the company offers, www.markettools.se, which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
 Now I'm employed by the hour at Diflex AB so they call me when needed for a project.
-I also have a B license (normal cars) and usually have access to a car if needed through my parents, but plan to buy a car in the near future.
+I also have a drivers license and usually have access to a car if needed through my parents, but plan to buy a car in the near future.
 </br></br>
 In my spare time I go to the gym, depending on how much time I have over. I am also the IT manager for HelsingborgsSpexet, which is a non-profit organization based around students at Campus Helsingborg.
+I also develop some Android applications for fun which can be seen in the "My Projects" tab at the top of this webpage.
 Information about that can be found at:
 </br>
 <a href="http://www.helsingborgsspexet.se/"> Helsingborgsspexet.se (Swedish)</a>
@@ -20,5 +21,6 @@ As an IT manager, I look after the website, is in charge of communication (email
 For the moment I am trying to build my portfolio by doing projects such as an Android application and this personal homepage.
 </br></br>
 My current goal is to get my foot in the industry and being able to make a living out of something I really enjoy doing - programming and working in a team.
+As a long term goal I would really want to become some kind of a project manager because it's something that I really enjoyed doing and had good results with during my education in projects in the school and on companies.
 </br></br>
 <img src="images/profilepicture.jpg" alt="Profile Picture"></br>
