Added more information on start page
Just text changes and adding a new headline.

--- a/start.html
+++ b/start.html
@@ -1,7 +1,5 @@
 <h1>
     <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h1>
-</br>
-Hello there!
 </br></br>
 My name is Dan Andersson and I am 23 years old.
 I am currently living in Klippan (Skåne, Sweden), but I've got plans to move as soon as possible depending on when and where I land my next job.
@@ -23,4 +21,15 @@ For the moment I am trying to build my portfolio by doing projects such as an An
 My current goal is to get my foot in the industry and being able to make a living out of something I really enjoy doing - programming and working in a team.
 As a long term goal I would really want to become some kind of a project manager because it's something that I really enjoyed doing and had good results with during my education in projects in the school and on companies.
 </br></br>
-<img src="images/profilepicture.jpg" alt="Profile Picture"></br>
+<img src="images/profilepicture.jpg" alt="Profile Picture"></br></br>
+
+<a id="2015-05-26" class="anchor" href="#2015-05-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-05-26</h1>
+</br></br>
+I'm still looking for a job but it's looking brighter the more experience that I get from developing on my own and applying for more jobs.
+</br>
+Lately I've been very interested in Android development and more specificly my BMI Calculator Application which I will be updating on the webpage once I'm fully satisfied with it. Considering to post the code as well with pictures like I currently have.
+</br>
+The application is working, it's calculating your BMI flawlessly. What I've played with is sharing it on social media such as Facebook and Twitter which was a fun experience and good practise in using new APIs. And then added Parse push notifications which made the application crash a lot. Using the Crashlytics tool I've managed to get rid of pretty much every bug that I have found so far.
+</br></br>
+I'll keep you updated as soon as I can!
+</br></br>
