--- a/start.html
+++ b/start.html
@@ -2,7 +2,7 @@
     <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h1>
 </br></br>
 My name is Dan Andersson and I am 23 years old.
-I am currently living in Klippan (Skåne, Sweden), but I've got plans to move as soon as possible depending on when and where I land my next job.
+I am currently living in Klippan (Skane, Sweden), but I've got plans to move as soon as possible depending on when and where I land my next job.
 I studied at the Faculty of Engineering (LTH), Lund University at their Campus Helsingborg for a bachelor's degree in computer science, in short it's a broad education that is most centered around the development of software, websites or applications for Android phones.
 </br></br>
 The past year I have spent at a company called Markettime AB, where I have worked with my bachelor's thesis and has been a web developer for a service that the company offers, www.markettools.se, which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
