Added missing <h1> tag

--- a/start.html
+++ b/start.html
@@ -23,7 +23,7 @@ As a long term goal I would really want to become some kind of a project manager
 </br></br>
 <img src="images/profilepicture.jpg" alt="Profile Picture"></br></br>
 
-<a id="2015-05-26" class="anchor" href="#2015-05-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-05-26</h1>
+<h1><a id="2015-05-26" class="anchor" href="#2015-05-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-05-26</h1>
 </br></br>
 I'm still looking for a job but it's looking brighter the more experience that I get from developing on my own and applying for more jobs.
 </br>
