--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="javascripts/modernizr.custom.js"></script>
 
     <link data-require="bootstrap-css" data-semver="3.1.1" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-    <link data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://raw.github.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
-    <script data-require="semantic-ui@*" data-semver="0.9.6" src="https://raw.github.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/javascript/semantic.min.js"></script>
+    <link Content-Type="application/css" data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
+    <script Content-Type="application/javascript" data-require="semantic-ui@*" data-semver="0.9.6" src="https://cdn.rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/javascript/semantic.min.js"></script>
     <script data-require="angular.js@1.2.x" src="http://code.angularjs.org/1.2.15/angular.js" data-semver="1.2.15"></script>
     <script data-require="jquery@*" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="app.js"></script>
@@ -27,7 +27,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Danieboy.GitHub.io by Danieboy</title>
+    <title>Danieboy.GitHub.io by Dan Andersson</title>
   </head>
 
   <body ng-controller="BlogController as blog">
