--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <svg class="hidden">
     <defs>
-      <path id="tabshape" d="M80,60C34,53.5,64.417,0,0,0v60H80z"/>
+      <path id="tabshape" d="M80,60C34,53.5,64.417,0,0,0v60H80z"></path>
     </defs>
   </svg>
 
