--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/tabs.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/tabstyles.css" />
     <link data-require="bootstrap-css" data-semver="3.1.1" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-    <link Content-Type="application/css" data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
+    <link data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
 
     <script src="app.js"></script>
     <script src="myDirectives.js"></script>
     <script data-require="angular.js@1.3.x" src="http://code.angularjs.org/1.3.15/angular.js" data-semver="1.3.15"></script>
     <script src="javascripts/modernizr.custom.js"></script>
-    <script Content-Type="application/javascript" data-require="semantic-ui@*" data-semver="0.9.6" src="https://rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/javascript/semantic.min.js"></script>
+    <script data-require="semantic-ui@*" data-semver="0.9.6" src="https://rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/javascript/semantic.min.js"></script>
     <script data-require="jquery@*" data-semver="2.1.4" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <!--[if lt IE 9]>
