Corrected links on BMI page

--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -51,13 +51,13 @@
             <a href="http://danieboy.github.io/resume"> Resume</a>
             </br>
             </br>
-            <a href="http://danieboy.github.io/My-projects"> My Projects</a>
+            <a href="http://danieboy.github.io/my-projects"> My Projects</a>
             </br>
             </br>
-            <a href="http://danieboy.github.io/Book-Reviews"> Book Reviews</a>
+            <a href="http://danieboy.github.io/book-Reviews"> Book Reviews</a>
             </br>
             </br>
-            <a href="http://danieboy.github.io/Contact"> Contact</a>
+            <a href="http://danieboy.github.io/contact"> Contact</a>
             </br>
             </br>
         </aside>
