--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -51,10 +51,10 @@
             <a href="http://danieboy.github.io/resume"> Resume</a>
             </br>
             </br>
-            <a href="http://danieboy.github.io/my-projects"> My Projects</a>
+            <a href="http://danieboy.github.io/myProjects"> My Projects</a>
             </br>
             </br>
-            <a href="http://danieboy.github.io/book-Reviews"> Book Reviews</a>
+            <a href="http://danieboy.github.io/reviews"> Book Reviews</a>
             </br>
             </br>
             <a href="http://danieboy.github.io/contact"> Contact</a>
