--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,9 @@ This is my contact info.
 <br/>
 <a href="http://se.linkedin.com/in/danandersson7"> Linkedin</a>
 <br/>
+<a href="https://twitter.com/DanProgramming"> Twitter</a>
+<br/>
 <a href="https://github.com/Danieboy"> GitHub</a>
 <br/>
 gda10dan@student.lu.se
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
