--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,8 @@
-This is my contact info.
+<h2><a href="http://se.linkedin.com/in/danandersson7"> Linkedin</a></h2>
 <br/>
-<a href="http://se.linkedin.com/in/danandersson7"> Linkedin</a>
+<h2><a href="https://twitter.com/DanProgramming"> Twitter</a></h2>
 <br/>
-<a href="https://twitter.com/DanProgramming"> Twitter</a>
+<h2><a href="https://github.com/Danieboy"> GitHub</a></h2>
 <br/>
-<a href="https://github.com/Danieboy"> GitHub</a>
-<br/>
-gda10dan@student.lu.se
+<h2>gda10dan@student.lu.se</h2>
 </br></br></br>
