--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js" ng-app="developerBlog">
   <head>
+    Expires: Thu, 24 Dec 2015 20:00:00 GMT
+    Header always append X-Frame-Options SAMEORIGIN
+    Header always append X-Frame-Options nosniff
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <meta name="description" content="Author: Dan Andersson Author" />
+    <meta property="og:title" content="Danieboy" />
+    <meta property="og:type" content="Developer Blog" />
+    <meta property="og:url" content="http://danieboy.github.io/" />
+    <meta property="og:image" content="http://danieboy.github.io/images/profilepicture.jpg" />
+    <link rel="icon" type="image/jpg" href="/images/Web-under-construction.jpeg" />
+    <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/images/Web-under-construction.jpeg" /><![endif]-->
+
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter:normal, italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
@@ -12,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/tabs.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
     <link data-require="bootstrap-css" data-semver="3.1.1" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-    <link data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://raw.github.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
+    <link Content-Type="text/css" data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://raw.github.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
 
     <script data-require="jquery@*" data-semver="2.1.4" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="javascripts/modernizr.custom.js"></script>
