--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js" ng-app="developerBlog">
   <head>
-    Expires: Thu, 24 Dec 2015 20:00:00 GMT
-    Header always append X-Frame-Options SAMEORIGIN
-    Header always append X-Frame-Options nosniff
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -15,7 +12,7 @@
     <link rel="icon" type="image/jpg" href="/images/Web-under-construction.jpeg" />
     <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/images/Web-under-construction.jpeg" /><![endif]-->
 
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter:normal, italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter:normal, italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
