--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 
     })();
   </script>
-  <script data-require="jquery@*" data-semver="2.1.4" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script data-require="semantic-ui@*" data-semver="0.9.6" src="https://rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/javascript/semantic.min.js"></script>
-  <script data-require="angular.js@1.3.x" src="http://code.angularjs.org/1.3.15/angular.js" data-semver="1.3.15"></script>
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/semantic.min.js"></script>
+  <script src="angular.js"></script>
   <script src="javascripts/modernizr.custom.js"></script>
   <script src="app.js"></script>
   <script src="myDirectives.js"></script>
