--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   </script>
   <script src="javascripts/jquery-2.1.4.min.js"></script>
   <script src="javascripts/semantic.min.js"></script>
-  <script src="angular.js"></script>
+  <script data-require="angular.js@1.3.x" src="http://code.angularjs.org/1.3.15/angular.js" data-semver="1.3.15"></script>
   <script src="javascripts/modernizr.custom.js"></script>
   <script src="app.js"></script>
   <script src="myDirectives.js"></script>
