Visual update on projects page

--- a/myProjects.html
+++ b/myProjects.html
@@ -1,6 +1,10 @@
 <h1><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></h1>
+</br>
 <h1><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></h1>
-<h1><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: BMI-counter</a></h1>
-<h1><a href="http://www.markettime.se/"> Markettime through Diflex AB (Swedish)</a></h1>
-<h1><a href="http://test2.markettools.se"> Markettools through Diflex AB (Swedish)</a></h1>
+</br>
+<h1><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: </br>BMI-counter</a></h1>
+</br>
+<h1><a href="http://www.markettime.se/"> Markettime </br>Markettime AB (Swedish)</a></h1>
+</br>
+<h1><a href="http://test2.markettools.se"> Markettools </br>Markettime AB (Swedish)</a></h1>
 </br></br>
