Translating resume to english

--- a/resume.html
+++ b/resume.html
@@ -1,64 +1,64 @@
-<h1>Anställningar</h1>
-<h2>Webbutvecklare</h2>
-Diflex AB, 2014 — 2015</br>
-Webbutvecklare i ASP.net, www.markettime.se / www.markettools.se.</br>
-Underhåll av sida, användbarhetstestning samt tillägg av extra funktioner efter kundkontakt.</br>
+<h1>Employments</h1>
+<h2>Web Developer</h2>
+MarketTime AB, 2014 — 2015</br>
+Web Developer in ASP.net, www.markettime.se / www.markettools.se.</br>
+Maintenance of the site, usability testing, addition of extra functionality and customer contact.</br>
 </br>
-<h2>Råvaruhanterare</h2>
+<h2>Handling of Raw Materials</h2>
 Perstorp AB, 2010 — 2013</br>
-Sommarjobb 4 år i rad.</br>
+Summer jobs four years in row.</br>
 </br>
-Arbetsuppgifter:</br>
-* Kommunikation med en många människor involverade i processen.</br>
-* Fysiskt tömma alla lastbilar och tågvagnar som levererades.</br>
-* Inventeringar av hela Perstorp ABs lager.</br>
+Duties:</br>
+* Communication with a lot of people involved in the process</br>
+* Physically empty all trucks and rail cars delivered.</br>
+* Inventories of the entire Perstorp AB's stock.</br>
 </br>
-<h2>Underhållsingenjör</h2>
+<h2>Maintenance Engineer</h2>
 Perstorp AB, 2009 — 2009</br>
-Praktik som sedan ledde till sommarjobb.</br>
+Internships which then led to a summer job.</br>
 </br>
-<h2>Processingenjör</h2>
+<h2>Process Engineer</h2>
 Perstorp AB, 2008 — 2008</br>
-Praktik.</br>
+Internship.</br>
 </br>
-<h2>Laborationstekniker</h2>
+<h2>Laboratory Technician</h2>
 Celanese Emulsions, 2008 — 2008</br>
-Sommarjobb.</br>
+Summer job.</br>
 </br>
-<h2>Simhallsanställd</h2>
+<h2>Indoor Swimming Pool Employee</h2>
 Klippans Simhall, 2006 — 2008</br>
-Sommarjobb på Ljungbyheds Friluftsbad 3 år i rad.</br>
+Summer job at Ljungbyheds Friluftsbad three years in a row.</br>
 
-
+</br>
 <h1>Utbildningar</h1>
 <h2>Lunds Tekniska Högskola, Campus Helsingborg</h2>
-Data, 2010 — 2015</br>
-Högskoleingenjör i Datateknik, allt från utveckling av program till applikationer för Android och webbutveckling.</br>
+Computer Science, 2010 — 2015</br>
+Bachelor of Science in Computer Science, from the development of software for applications for Android and web development.</br>
 </br>
 <h2>Perstorp Gymnasium</h2>
-Teknik och teknisk industri, 2007 — 2010</br>
-Perstorp Gymnasium, en av de bästa gymnasieskolorna i Sverige under tiden. Allt från industri till kemi och företagsekonomi.</br>
+Engineering and technical industry, 2007 — 2010</br>
+Perstorp Gymnasium, one of the best secondary schools in Sweden. Everything from industry to chemistry and business administration.</br>
+</br>
 
-
-<h1>Programmeringsspråk / relevanta verktyg</h1>
-Java / Android utveckling.</br>
+<h1>Programming languages ​​/ tools</h1>
+Java / Android development.</br>
 C++.</br>
 ASP.net (C#, CSS, XML, SQL, JavaScript, phpMyAdmin).</br>
 HTML/HTML5.</br>
 Angular.js / Bootstrap.</br>
 GitHub / GitPages.</br>
 
+</br>
+<h1>Other Merits</h1>
+<h2>IT Manager / Webmaster</h2>
+Helsingborgsspexet, 2014 — 2015</br>
+Communications Manager and responsible for the website, social media and on the board.</br>
 
-<h1>Övriga meriter</h1>
-<h2>IT-ansvarig/Webmaster</h2>
-Helsingborgsspexet, 2014 — Pågående</br>
-Kommunikationsansvarig samt ansvarig för hemsida, sociala medier och med i styrelse.</br>
+</br>
+<h1>Driving License</h1>
+AM, B.
 
-
-<h1>Körkort</h1>
-AM, B
-
-<h1>Språk</h1>
-Engelska, Flytande</br>
-Svenska, Flytande</br>
-Tyska, Lite</br>
+<h1>Languages</h1>
+English, fluent.</br>
+Swedish, fluent.</br>
+German, intermediate.</br>
